--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ tqdm>=4.64.0
 ultralytics>=8.0.100
 fastapi==0.88.0
 uvicorn==0.20.0
+ipython==8.13.2
+
 # protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
 
 # Logging ---------------------------------------------------------------------
