--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,3 @@
----
 # Source: onechart/templates/service.yaml
 apiVersion: v1
 kind: Service
@@ -54,9 +53,9 @@ spec:
       initContainers:      
       containers:
         - name: my-release
-          securityContext: &securityContext
+          securityContext: 
             {}
-          image: "https://github.com/aarushiwagh/Industrial-OCR.git:latest"
+          image: "aarushiwagh/industrial-ocr:latest"
           imagePullPolicy: IfNotPresent
           
           ports:
@@ -71,4 +70,4 @@ spec:
               memory: 200Mi
             requests:
               cpu: 200m
-              memory: 200Mi
+              memory: 200Mi 
