--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,27 @@
+shapely
+scikit-image
+imgaug
+pyclipper
+lmdb
+tqdm
+numpy
+visualdl
+rapidfuzz
+opencv-python==4.6.0.66
+opencv-contrib-python==4.6.0.66
+cython
+lxml
+premailer
+openpyxl
+attrdict
+Polygon3
+lanms-neo==1.0.2
+PyMuPDF<1.21.0
 paddle-bfloat==0.1.7
 paddleocr==2.6.1.3
 paddlepaddle==2.5.0
 gitpython>=3.1.30
 matplotlib>=3.3
-numpy>=1.18.5
-opencv-python>=4.1.1
 Pillow>=7.1.2
 requests>=2.23.0
 fastapi==0.88.0
