--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+python_version==3.9.5
 shapely
 scikit-image
 imgaug
@@ -19,7 +20,7 @@ lanms-neo==1.0.2
 PyMuPDF<1.21.0
 paddle-bfloat==0.1.7
 paddleocr==2.6.1.3
-paddlepaddle==2.5.0
+paddlepaddle
 gitpython>=3.1.30
 matplotlib>=3.3
 Pillow>=7.1.2
