--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 shapely
+libgl1-mesa-glx
 scikit-image
 imgaug
 pyclipper
@@ -7,9 +8,8 @@ tqdm
 numpy
 visualdl
 rapidfuzz
-opencv-python-headless
-#opencv-python==4.6.0.66
-#opencv-contrib-python==4.6.0.66
+opencv-python==4.6.0.66
+opencv-contrib-python==4.6.0.66
 cython
 lxml
 premailer
